--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,10 +5,6 @@ body {
   color: rgb(20, 20, 20);
 }
 
-a {
-  color: #00b7ff;
-}
-
 h1 {
   text-align: center;
   color: rgb(20, 20, 20);
@@ -45,4 +41,82 @@ p {
   color: rgb(96, 96, 96);
   text-transform: uppercase;
   letter-spacing: 0.3px;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-width: 100%;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  width: 80%;
+}
+
+button[type='submit'] {
+  background-color: rgb(36, 86, 223);
+  padding: 10px 30px;
+  font-size: 0.9rem;
+  letter-spacing: 0.1em;
+  font-weight: 500;
+  color: rgb(255, 255, 255);
+  border-radius: 5px;
+  border: none;
+  box-shadow: 0px 2px 4px rgb(133, 133, 133);
+  text-transform: uppercase;
+}
+
+button[type='submit']:hover {
+  background-color: rgb(54, 101, 232);
+  cursor: pointer;
+}
+
+label {
+  font-size: 0.9rem;
+  color: rgb(24, 24, 24);
+  font-weight: 500;
+  letter-spacing: 0.1em;
+  padding-bottom: 3px;
+}
+
+input[type='text'],
+textarea {
+  font-size: 0.9rem;
+  padding: 10px;
+  border: solid 1px rgb(229, 231, 235);
+  border-radius: 4px;
+  outline: none;
+  font-family: inherit;
+}
+
+.input-group {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+input[type='text'] {
+  height: 20px;
+}
+
+textarea {
+  height: 100px;
+}
+
+.required {
+  font-weight: 400;
+  font-style: italic;
+  font-size: 0.8rem;
+  color: rgb(96, 96, 96);
+}
+
+@media (min-width: 576px) {
+  form {
+    max-width: 540px;
+  }
 }
