--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,7 +7,12 @@ body {
 
 h1 {
   text-align: center;
-  color: rgb(20, 20, 20);
+  font-size: 2rem;
+}
+
+h2 {
+  text-align: center;
+  font-size: 1.5rem;
 }
 
 .messages {
@@ -39,7 +44,6 @@ p {
   font-weight: 400;
   font-size: 12px;
   color: rgb(96, 96, 96);
-  text-transform: uppercase;
   letter-spacing: 0.3px;
 }
 
@@ -58,7 +62,7 @@ form {
   width: 80%;
 }
 
-button[type='submit'] {
+button {
   background-color: rgb(36, 86, 223);
   padding: 10px 30px;
   font-size: 0.9rem;
@@ -71,9 +75,14 @@ button[type='submit'] {
   text-transform: uppercase;
 }
 
-button[type='submit']:hover {
+button:hover {
   background-color: rgb(54, 101, 232);
   cursor: pointer;
+}
+
+.newMessageButton {
+  align-self: center;
+  margin-bottom: 1rem;
 }
 
 label {
