--- a/views/form.ejs
+++ b/views/form.ejs
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mini Messageboard</title>
+    <title>Mini Message Board</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
-    <h1>Mini Messageboard</h1>
+    <h1>Mini Message Board</h1>
     <h2><%= title %></h2>
     <div class="form-container">
       <form method="POST" action="/new">
